--- a/.travis.yml
+++ b/.travis.yml
@@ -1,19 +1,7 @@
 language: node_js
 
-os:
-  - linux
-  - osx
-
-node_js:
-- "0.10"
-
-sudo: false
-
 install:
-- npm install grunt-cli
-- npm install
-  
-script: 
-- node_modules/grunt-cli/bin/grunt test
+  - npm install
 
-
+script:
+  - npm test
