--- a/package.json
+++ b/package.json
@@ -26,14 +26,16 @@
     "node": ">= 0.8.0"
   },
   "scripts": {
-    "test": "grunt test"
+    "test": "grunt test",
+    "precommit": "grunt jshint"
   },
   "devDependencies": {
     "async": "^2.0.0-rc.6",
-    "grunt": "~0.4.1",
+    "grunt": "^0.4.5",
     "grunt-contrib-clean": "~0.5.0",
     "grunt-contrib-jshint": "~0.6.0",
     "grunt-contrib-nodeunit": "^1.0.0",
+    "husky": "^0.14.3",
     "jshint-stylish": "~0.1.3"
   },
   "peerDependencies": {
