--- a/package.json
+++ b/package.json
@@ -30,7 +30,6 @@
     "precommit": "grunt jshint"
   },
   "devDependencies": {
-    "async": "^2.0.0-rc.6",
     "grunt": "^0.4.5",
     "grunt-contrib-clean": "~0.5.0",
     "grunt-contrib-jshint": "~0.6.0",
@@ -42,6 +41,7 @@
     "grunt": ">=0.4.1"
   },
   "dependencies": {
+    "async": "^2.6.0",
     "inquirer": "^0.2.5"
   },
   "keywords": [
