--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "grunt-contrib-jshint": "~0.6.0",
     "grunt-contrib-nodeunit": "^1.0.0",
     "husky": "^0.14.3",
+    "jshint": "^2.9.5",
     "jshint-stylish": "~0.1.3"
   },
   "peerDependencies": {
